Refactor image syntax in miranda-boedtker.mdx to utilize Figure component, enhancing visual presentation and maintaining consistency with recent updates.

--- a/content/tema/vekster/miranda-boedtker.mdx
+++ b/content/tema/vekster/miranda-boedtker.mdx
@@ -10,13 +10,17 @@ keywords:
 ---
 
 <ContentGrid>
-![Foto av Miranda Bødtker](/images/vekster/ubb-ms-2093-t-02-15-04-07.jpg)
-*Miranda Bødtker, fotografert på Kalandseid i Fana 1943. Utsnitt. Fotograf: Astrid Monsen. Universitetsbiblioteket i Bergen.*
-
-
 # Miranda Bødtker
 
-Miranda Bødtker (1896-1996) satte mangfoldige og fargerike spor etter seg som illustratør og kunstner. Ved Universitetsmuseet er det bevart ca. 8000 tegninger og akvareller med motiver fra botanikk, zoologi, arkeologi, brukskunst og bygdekunst, og sine egne kunstneriske design og arbeider.  
+Miranda Bødtker (1896-1996) satte mangfoldige og fargerike spor etter seg som illustratør og kunstner. Ved Universitetsmuseet er det bevart ca. 8000 tegninger og akvareller med motiver fra botanikk, zoologi, arkeologi, brukskunst og bygdekunst, og sine egne kunstneriske design og arbeider.
+
+<Figure mode="portrait" image="/images/vekster/ubb-ms-2093-t-02-15-04-07.jpg" alt="" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Miranda Bødtker, fotografert på Kalandseid i Fana 1943. Utsnitt. Fotograf: Astrid Monsen. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 I tillegg til å arbeide som tekstillærer ved Bergen Kunsthåndverksskole, reiste hun Vestlandet rundt for å dokumentere tekstiler og bygdekunst. Hun samarbeidet med forskere på Bergens Museum, og leverte over 2000 svart/hvitt-tegninger til botanikeren Rolf Nordhagens «Norsk Flora». Hun deltok på feltarbeid og ekskursjoner med forskere fra museet, i særlig grad med geologen Astrid Monsen, og Bødtker har fotografert to av de få portrettene som er bevart av Monsen. 
 
