--- a/content/tema/fisk/thorholv-rasmussen.mdx
+++ b/content/tema/fisk/thorholv-rasmussen.mdx
@@ -9,11 +9,18 @@ keywords:
 ---
 
 <ContentGrid className="mt-10">
-![Fisk tegnet av Rasmussen](/images/fisk/um-rasmussen.jpg)
-*Rød skorpionfisk, tegnet av Thorolv Rasmussen, 1910. Universitetsmuseet i Bergen.*
 
 # Thorolv Rasmussen
 
 På Norskehavstoktet med «S/S Michael Sars» i 1910 deltok bergenskunstneren Thorolv Rasmussen, som førte til at Universitetsmuseet i Bergen i dag har en skatt av kaldnålstegninger og de tilhørende objektene av skapninger fra havets dyp.
 Les mer om Thorolv Rasmussen i &quot;200 Fortellinger&quot;: <a href="https://tohundrefortellinger.w.uib.no/1910/09/26/1910-kunsten-a-tegne-fisk-thorolv-rasmussen/">1910 Thorolv Rasmussen – eller «kunsten å tegne fisk» – To hundre fortellinger på to hundre år</a>.
+
+<Figure image="/images/fisk/um-rasmussen.jpg" alt="Akvarell av rød skorpionfisk" width={2000} height={2000}>
+  <Figure.Content>
+    <Figure.Description>
+      Rød skorpionfisk, tegnet av Thorolv Rasmussen, 1910. Universitetsmuseet i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
 </ContentGrid>
