Refactor image syntax in peter-stuwitz.mdx to utilize Figure component, enhancing visual presentation and maintaining consistency with recent updates.

--- a/content/tema/fisk/peter-stuwitz.mdx
+++ b/content/tema/fisk/peter-stuwitz.mdx
@@ -9,16 +9,29 @@ keywords:
 ---
 
 <ContentGrid className="mt-10">
-![Fisk tegnet av Stuwitz](/images/fisk/ubb-ms-0311-a-001.jpg)
-*Skjellbrosme, tegnet av Peter Stuwitz. Universitetsbiblioteket i Bergen.*
 
 # Peter Stuwitz
 
 Peter Stuwitz ble født i Bergen i 1806, og ble fra svært ung alder interessert i naturvitenskap, og var allerede som tenåring en fremragende illustratør. Stuwitz studerte teologi i Christiania fra 1832 til 1837, da han ble cand. theol. Men Stuwitz arbeidet aldri som prest, det meste av studietiden ble brukt til zoologiske studier, og han publiserte bl.a. flere artikler om marinbiologi. I 1838 ble Stuwitz medlem av museumsstyret ved Bergens Museum, og samme år fikk han stipend for å studere «lavere sjødyr» langs kysten fra Bergen til Trondheim. I 1839 ble han medlem av den statlige ekspedisjonen som ble sendt til Labrador og Newfoundland for å studere fiskeriet i området. Han døde av tuberkulose på Newfoundland i 1842, bare 36 år gammel.
 
+<Figure className="feature" image="/images/fisk/ubb-ms-0311-a-001.jpg" alt="Skjellbrosme" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Skjellbrosme, tegnet av Peter Stuwitz. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
 Stuwitz etterlot seg store mengder vitenskapelig arkivmateriale og samlinger. Ved Universitetsbiblioteket er det bevart dagbøker, brev, notatbøker, og ikke minst skissebøker og illustrasjoner av fisker, sjødyr, sommerfugler og insekter. Deler av den zoologiske samlingen til Stuwitz ble bevart på Bergens Museum.
 
-![Fisk tegnet av Stuwitz](/images/fisk/ubb-ms-0311-a-002.jpg)
+<Figure className="feature" image="/images/fisk/ubb-ms-0311-a-002.jpg" alt="Tegning av ålekvabbe omgitt av håndskrevet tekst. " width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Ålekvabbe, tegnet av Peter Stuwitz. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
 *Ålekvabbe, tegnet av Peter Stuwitz. Universitetsbiblioteket i Bergen.*
 
 </ContentGrid>
