legg-til-tekst-mennesker

--- a/content/menneskene.mdx
+++ b/content/menneskene.mdx
@@ -20,6 +20,20 @@ import {Cards, Card} from '@/components/card'
     imageAlt="Portrett av Chrisite" 
     href="/wfk-Christie"
   />
+   <Card 
+    title="Jacob Neumann (1772-1848)"
+    description="Biskop i Bergen og sentral i museets Direksjon og innsamlingsarbeid" 
+    image="/images/Mennesker-museet/By7851_Neumann_red.jpg" 
+    imageAlt="Portrett av Neumann" 
+    href="https://nbl.snl.no/Jacob_Neumann"
+  />
+   <Card 
+    title="August Konow (1780-1873)"
+    description="Foretningsmann, politiker og sentral i opprettelsen av Bergens Museum" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Portrett av Chrisite" 
+    href="https://nbl.snl.no/August_Konow"
+  />
   <Card
     title="Andres Lorange (1847-1888)"
     description="Museets første konservator og arkeolog" 
@@ -35,38 +49,38 @@ import {Cards, Card} from '@/components/card'
     href="/folk-olaf-hanssen"
   />
   <Card 
-    title="Christie"
-    description="Les om Christie" 
+    title="Magdalene Abel (1869-)"
+    description="Multitallent, tegner og sektær ved museet" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Portrett av Chrisite" 
+    imageAlt="Portrett av Magdalene Abel" 
+    href="/"
+  />
+  <Card 
+    title="Haakon Shetelig (1877-1955)"
+    description="Museets første professor i arkeologi" 
+    image="/images/Mennesker-museet/HaakonShetelig_red.jpg" 
+    imageAlt="Portrett av Haakon Shetelig" 
+    href="https://snl.no/Haakon_Shetelig"
+  />
+  <Card 
+    title="Johannes Bøe (1891-1971)"
+    description="Professor i arkeologi" 
+    image="/images/Mennesker-museet/Johs_Bøe_red.jpg" 
+    imageAlt="Portrett av Johs. Bøe" 
+    href="https://snl.no/Johannes_B%C3%B8e"
+  />
+  <Card 
+    title="Eva Fett"
+    description="Norges første kvinnlige arkeolog" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Portrett av Eva Fett" 
     href="https://marcus.uib.no"
   />
   <Card 
-    title="Christie"
-    description="Les om Christie" 
+    title="Per Fett"
+    description="Arkeolog" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Portrett av Chrisite" 
-    href="https://marcus.uib.no"
-  />
-  <Card 
-    title="Christie"
-    description="Les om Christie" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Portrett av Chrisite" 
-    href="https://marcus.uib.no"
-  />
-  <Card 
-    title="Christie"
-    description="Les om Christie" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Portrett av Chrisite" 
-    href="https://marcus.uib.no"
-  />
-  <Card 
-    title="Christie"
-    description="Les om Christie" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Portrett av Chrisite" 
+    imageAlt="Portrett av Per Fett" 
     href="https://marcus.uib.no"
   />
   <Card 
