Update JumpToStories title in vann-vaer-og-vind index.mdx

--- a/content/tema/vann-vaer-og-vind/index.mdx
+++ b/content/tema/vann-vaer-og-vind/index.mdx
@@ -27,13 +27,11 @@ import { JumpToStories } from '@/components/jump-to-stories'
 <ContentGrid>
 Det <a href="https://marcus.uib.no/instance/photograph/ubb-kk-1318-1014.html">spektakulære fotografiet</a> av Bøyabreen i Fjærland ble fotografert av Knud Knudsen tidlig i 1870-årene, og er ett av ca. 400 brefotografier tatt av Knudsen i perioden 1860-1900, alle bevart ved Billedsamlingen på UBB. Knudsens, og senere fotografers brefotografier tatt i forbindelse med Bergens Museums bremålinger, er uvurderlig kildemateriale i dagens klimaforskning. De er et visuelt reservoar som dokumenterer og synliggjør langsiktige variasjoner og forandringer ved norske isbreer. 
 
-<JumpToStories title="vann-vaer-og-vind" />
+<JumpToStories title="vann, vær og vind" />
 
 Vann, vær og vind (og is) var blant de viktigste forskningsområdene ved Bergens Museum, og er det fortsatt ved UiB i 2025. Ansatsen til denne bergenske forskningstradisjonen var Nordhavs-ekspedisjonen 1876-1878, en tverrfaglig ekspedisjon med utspring i Bergens Museum. Det svært omfattende prøvematerialet samlet inn i løpet av de tre ekspedisjonene ble utgangspunktet for videre forskning og utvikling av flere fagmiljøer, bl.a. gjennom Geofysisk institutt, etablert i 1917.
 
 Arkivmaterialet fra Nordhavsekspedisjonen bevart ved Universitetsbiblioteket er tilsvarende omfattende – dagbøker, feltbøker, illustrasjoner, brev og rapporter. Materialet gir et svært godt innblikk i det vitenskapelige arbeidet i de arktiske farvannene, og synliggjør samtidig dagliglivet og strabasene om bord på skipet «Vøringen», med fem-retters middager, daglige kveldssammenkomster med drinker og sang, og kronisk sjøsyke ekspedisjonsdeltagere.
-
-
 
 <Cards id="historier" title="Historier om vann, vær og vind (og is)" className="full pt-10 md:pt-20">
   <Card 
