Refactor image syntax in breforskning.mdx to utilize Figure component, improving visual presentation and ensuring consistency with recent updates.

--- a/content/tema/vann-vaer-og-vind/breforskning.mdx
+++ b/content/tema/vann-vaer-og-vind/breforskning.mdx
@@ -12,15 +12,20 @@ keywords:
 ---
 
 <ContentGrid>
-![Isbre](/nav-card-images/ubb-kk-ns-0214-icon.jpg)
-*«Parti af Folgefonden», 1864. Fotograf: Knud Knudsen. Universitetsbiblioteket i Bergen.*
-
 
 # Breforskning
 
+<Figure image="/nav-card-images/ubb-kk-ns-0214-icon.jpg" alt="Isbre" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      «Parti af Folgefonden», 1864. Fotograf: Knud Knudsen. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
 Brearmen på Nigardsbreen, der mannen med dress poserte for fotograf Knud Knudsen i 1874, er for lengst smeltet bort. Knudsen (1832-1915) fotograferte ved Nigardsbreen ved tre anledninger, mellom 1874 og 1896. Ved hvert besøk ble mange av motivene fotografert fra de samme ståstedene, noe som gjør det mulig å følge utviklingen av Nigardsbreen i en drøy 20-årsperiode.
 
-<Work iiifContent="https://api.ub.uib.no/items/ubb-kk-1318-1038?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-kk-1318-1038?as=iiif">
   <Work.Content>
     <Work.Description>
       Folgefonna. Fotografi fra midten av 1860-årene av Knud Knudsen. Universitetsbiblioteket i Bergen.
@@ -31,7 +36,7 @@ Brearmen på Nigardsbreen, der mannen med dress poserte for fotograf Knud Knudse
   </Work.Content>
 </Work>
 
-<Work iiifContent="https://api.ub.uib.no/items/ubb-kk-2127-2044?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-kk-2127-2044?as=iiif">
   <Work.Content>
     <Work.Description>
       Folgefonna. Fotografi fra midten av 1860-årene av Knud Knudsen. Universitetsbiblioteket i Bergen.
@@ -42,9 +47,13 @@ Brearmen på Nigardsbreen, der mannen med dress poserte for fotograf Knud Knudse
   </Work.Content>
 </Work>
 
-![Isbre](/images/vann-vaer-og-vind/ubb-ms-2196-b-09-041.jpg)
-*Nigardsbreen, 1947. Fotograf: Knut Fægri. Universitetsbiblioteket i Bergen.*
-
+<Figure className="feature" image="/images/vann-vaer-og-vind/ubb-ms-2196-b-09-041.jpg" alt="Isbre" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Nigardsbreen, 1947. Fotograf: Knut Fægri. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Bergens Museum startet like før århundreskiftet bremålinger ved Jostedalsbreen, målinger som årlig ble publisert i Bergens Museums Årbok. Geologen John Bernhard Rekstad (1852-1934) hadde ansvaret for målingene fra 1899 til 1932, samtidig som han årlig fotograferte de ulike brearmene.  I Rekstads fotosamling ved Spesialsamlingene finnes en rekke motiver fra Nigardsbreen, fotografier til dels fra samme ståsted som Knudsens bilder fra 1874.
 
@@ -52,9 +61,13 @@ Den vordende botanikkprofessor Knut Fægri (1909-2001) overtok ansvaret for brem
 
 Fægris bruk av Knudsens og Rekstads brefotografier, og hans egen bre-fotografiske praksis, synliggjør potensialet til historiske brefotografier som kilde- og dokumentasjonsmateriale, og ikke minst som uvurderlige primærkilder for dagens klima- og breforskning.
 
-![Isbre](/images/vann-vaer-og-vind/ubb-ms-2267-vi-e-007.jpg)
-*«Blaadalsbræ», geologisk undervisningsplansje. Universitetsbiblioteket i Bergen.*
-
+<Figure mode="portrait" image="/images/vann-vaer-og-vind/ubb-ms-2267-vi-e-007.jpg" alt="Isbre" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      «Blaadalsbræ», geologisk undervisningsplansje. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 *Deler av teksten er tidligere publisert i Khrono, 9.11.2018.*
 
