--- a/content/tema/vann-vaer-og-vind/nordhavsekspedisjonen.mdx
+++ b/content/tema/vann-vaer-og-vind/nordhavsekspedisjonen.mdx
@@ -11,38 +11,66 @@ keywords:
 ---
 
 <ContentGrid>
-![Ekspedisjonsdeltakere på dekk](/images/vann-vaer-og-vind/ubb-bs-ok-01146-002.jpg)
-*Deltagerne på Nordhavsekspedisjonen nyter kaffe og konjakk på dekket ombord på «Vøringen», 1876-1878. Fotograf ukjent. Universitetsbiblioteket i Bergen.*
-
 
 # Nordhavsekspedisjonen
 
+<Figure image="/images/vann-vaer-og-vind/ubb-bs-ok-01146-002.jpg" alt="Ekspedisjonsdeltakere på dekk" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Deltagerne på Nordhavsekspedisjonen nyter kaffe og konjakk på dekket ombord på «Vøringen», 1876-1878. Fotograf ukjent. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
 Den Norske Nordhavs-Expedition 1876-1878 var den første nasjonale satsingen på marin forskning og dyphavsforskning. I løpet av tre tokt sommermånedene 1876-78 utforsket ekspedisjonen havområdene i Norskehavet og i deler av Barentshavet, om bord på det 144 fot store dampskipet «Vøringen», med flere deltagere tilknyttet Bergens Museum. Overlegen, lepraforskeren og museumsbestyreren Daniel Cornelius Danielssen (1815-1894) var som stortingsrepresentant svært sentral i arbeidet med å skaffe bevilgninger til ekspedisjonen, og han deltok selv som zoolog, sammen med Herman Friele, og initiativtagerne G. O. Sars og Henrik Mohn, kjemikerne Svendsen, Tornøe og Schmelck, landskapsmaleren Frantz W. Schiertz, og ekspedisjonsleder kaptein Carl F. Wille.
 
-![Skuta Vøringen](/images/vann-vaer-og-vind/ubb-romertall-foliant-x-exp-1-001.jpg)
-*D/S «Vøringen». Fra Den Norske Nordhavs-Expedition 1876-1878, bind 1, 1882. Universitetsbiblioteket i Bergen.*
+<Figure image="/images/vann-vaer-og-vind/ubb-romertall-foliant-x-exp-1-001.jpg" alt="Skuta Vøringen" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      D/S «Vøringen». Fra Den Norske Nordhavs-Expedition 1876-1878, bind 1, 1882. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Målene for ekspedisjonen var ambisiøse: undersøke havets dybde, temperatur, og kjemiske sammensetning, strømninger, havbunnens geologiske formasjoner, værforhold og klima, dyphavets dyre- og planteverden. Prøver ble tatt på 375 målestasjoner, og funnene fra ekspedisjonen ble svært omfattende og banebrytende, særlig gjennom Mohns beskrivelser og utregninger av havstrømmer og temperaturnivåer, og gjennom oppdagelsene av 300 nye dyrearter fra dyphavet. 
 Fem av Danielssens feltbøker fra ekspedisjonen er bevart, det samme er de uinnbundne feltnotatene til zoologen og forretningsmannen Herman Friele (1838-1921). Danielssens feltbøker er blottet for personlige kommentarer eller skildringer fra ekspedisjonen, innførslene fokuserer utelukkende på de ulike dyreartene som fulgte med trålen og skrapen opp fra havdypet på de ulike målestasjonene. Sjøanemoner og koralldyr måles og beskrives detaljert og nøkternt, og feltbøkene har, sammen med de bevarte funnene, fungert som primærkilder for de syv avhandlingene Danielssen i ettertid skrev og publiserte i syvbindsverket fra Nordhavsekspedisjonen.
 
-![Tegning av vulkan i feltbok](/images/vann-vaer-og-vind/ubb-ms-0677-d-05-044.jpg)
-*Skisse av Jan Mayen, fra dagbok av Herman Friele, 1877.  Universitetsbiblioteket i Bergen.*
+<Figure className="feature" image="/images/vann-vaer-og-vind/ubb-ms-0677-d-05-044.jpg" alt="Tegning av vulkan i feltbok" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Skisse av Jan Mayen, fra dagbok av Herman Friele, 1877. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
-![Karikatur](/images/vann-vaer-og-vind/ubb-ms-0825-d-1-0023.jpg)
-*Tegning fra livet om bord på D/S «Vøringen». Kunstner ukjent. Universitetsbiblioteket i Bergen.*
 
+<Figure image="/images/vann-vaer-og-vind/ubb-ms-0825-d-1-0023.jpg" alt="Karikatur" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Tegning fra livet om bord på D/S «Vøringen». Kunstner ukjent. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Avhandlingen om Actinida (sjøanemoner) er praktfullt illustrert med fargelitografier, basert på originalakvarellene til Franz Wilhelm Schiertz. Schiertz ble engasjert som landskapsmaler og illustratør på ekspedisjonen, og deltok på alle tre toktene med «Vøringen». Sammen med sin lidelsesfelle Danielssen var Schiertz svært preget av sjøsyke, særlig i de lange stormperiodene i 1876 og 1878, da begge i perioder måtte avstå fra sin vanlige «kveldsgrogg» sammen med de andre vitenskapsmennene og offiserene.
 
-![Sjøanemoner](/images/vann-vaer-og-vind/ubb-ms-0510-b-03-b-1-001.jpg)
-*Sjøanemoner, akvareller av F.W. Schiertz, fra Nordhavsekspedisjonen 1876-1878. Universitetsbiblioteket i Bergen.*
-
+<Figure className="feature" mode="portrait" image="/images/vann-vaer-og-vind/ubb-ms-0510-b-03-b-1-001.jpg" alt="Sjøanemoner" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Sjøanemoner, akvareller av F.W. Schiertz, fra Nordhavsekspedisjonen 1876-1878. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Skildringene av stormer og sjøsyke er hentet fra Frieles håndskrevne notater fra ekspedisjonen, en salig blanding av reisedagbok, feltnotater og anekdoter som lar oss følge både det vitenskapelige arbeidet og livet om bord på «Vøringen», med de faste «grogg»-kveldene akkompagnert av Mohns fiolin, Danielssens sjøsyke, og bl.a.  feiringen av Danielssens bursdag utenfor Bjørnøya 4. juli 1878.
 
-![Menykort](/images/vann-vaer-og-vind/ubb-ms-0825-e.jpg)
-*Menykort fra Nordhavsekspedisjonen, 16. juni 1878. Universitetsbiblioteket i Bergen.*
-
+<Figure image="/images/vann-vaer-og-vind/ubb-ms-0825-e.jpg" alt="Menykort" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Menykort fra Nordhavsekspedisjonen, 16. juni 1878. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Friele skildret bl.a. stemningen da trålen og bunnskrapen ble heist om bord: «Skraben blev sat ud, og kom op igjen fyldt med mudder, indeholdende mange og høist interessante og for videnskaben nye dyr (..) Hvad dyr som blev vasket ud af mudderen blev undersøgt med umaadelig interesse, og formelig barnlig var den glæde som ytredes af den lykkelige der eier fundet». 
 Foruten zoologien hadde Danielssen også ansvaret for botaniske innsamlinger på ekspedisjonen, han botaniserte på Jan Mayen i juli 1877, og på Svalbard i august 1878. 
