--- a/content/tema/vann-vaer-og-vind/vann-is-bilder.mdx
+++ b/content/tema/vann-vaer-og-vind/vann-is-bilder.mdx
@@ -11,13 +11,18 @@ keywords:
 ---
 
 <ContentGrid>
-![Isbre på kart](/images/vann-vaer-og-vind/ubb-ms-2267-vi-e-021.jpg)
-*Hardangerjøkulen. Utsnitt fra håndkolorert geologisk undervisningsplansje. Universitetsbiblioteket i Bergen.*
-
 
 # Vann, vær og vind (og is) i bilder
 
-<Work iiifContent="https://api.ub.uib.no/items/ubb-kk-1318-1014?as=iiif">
+<Figure image="/images/vann-vaer-og-vind/ubb-ms-2267-vi-e-021.jpg" alt="Isbre på kart" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Hardangerjøkulen. Utsnitt fra håndkolorert geologisk undervisningsplansje. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
+<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-kk-1318-1014?as=iiif">
   <Work.Content>
     <Work.Description>
       «Parti af Bøiumsbræen, Fjærland i Sogn», 1872-75. Fotograf: Knud Knudsen. Universitetsbiblioteket i Bergen.
@@ -28,12 +33,15 @@ keywords:
   </Work.Content>
 </Work>
 
+<Figure className="feature" image="/images/vann-vaer-og-vind/ubb-ms-2093-u-2-028.jpg" alt="Foto av isbre" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      «Nigardsbræ, Jostedalen. 1931». Fotograf: John B. Rekstad. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
-![Foto av isbre](/images/vann-vaer-og-vind/ubb-ms-2093-u-2-028.jpg)
-*«Nigardsbræ, Jostedalen. 1931». Fotograf: John B. Rekstad. Universitetsbiblioteket i Bergen.*
-
-
-<Work iiifContent="https://api.ub.uib.no/items/ubb-bs-fol-00842-011?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-bs-fol-00842-011?as=iiif">
   <Work.Content>
     <Work.Description>
       «Parti af Bøiumsbræen, Fjærland i Sogn», 1872-75. Fotograf: Knud Knudsen. Universitetsbiblioteket i Bergen.
@@ -44,9 +52,12 @@ keywords:
   </Work.Content>
 </Work>
 
-
-![Trykk i bok av Jan Mayen](/images/vann-vaer-og-vind/ubb-romertall-foliant-x-exp-2-001.jpg)
-*Litografi fra Jan Mayen, laget av F.W. Schiertz. Fra Den Norske Nordhavs-Expedition 1876-1878, bind 1, 1882. Universitetsbiblioteket i Bergen.*
-
+<Figure className="feature" image="/images/vann-vaer-og-vind/ubb-romertall-foliant-x-exp-2-001.jpg" alt="Trykk i bok av Jan Mayen" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Litografi fra Jan Mayen, laget av F.W. Schiertz. Fra Den Norske Nordhavs-Expedition 1876-1878, bind 1, 1882. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 </ContentGrid>
