--- a/content/tema/bokstaver-og-tegn/ms-28.mdx
+++ b/content/tema/bokstaver-og-tegn/ms-28.mdx
@@ -20,15 +20,15 @@ Tittelen på boken er «Ieronymi commentariorum super Mathæum liber», og inneh
 ![Håndskrevet pergamentbok](/images/bokstaver-og-tegn/ubb-ms-0028-p206.jpg)
 *Spor av en reparasjon av skinnet før det ble et sideblad i Ms 28. Universitetsbiblioteket i Bergen.*
 
-Denne håndskrevne boken er ikke så gammel, selv om den har noen år på nakken selv. Det er ikke alltid like lett å datere gamle håndskrifter. Derfor er vi glade for at Ulbaldus som skrev boken for hånd, tilføyde at han satte det siste punktumet i år 1200. På latin skrev han også: «Måtte Guds åsyn lyse over meg og måtte jeg følge min lærer Hieronymus».
+Denne håndskrevne boken er ikke like gammel, selv om den har noen år på nakken selv. Det er ikke alltid like lett å datere gamle håndskrifter. Derfor er vi glade for at Ulbaldus som skrev boken for hånd, tilføyde at han satte det siste punktumet i år 1200. På latin skrev han også: «Måtte Guds åsyn lyse over meg og måtte jeg følge min lærer Hieronymus».
 Det er alltid spennende å følge livsløpet til en bok - hvem har eid den, og hvordan havnet den der den er i dag. Akkurat denne boken har tilhørt Mariaklosteret i Cambron i Belgia, og ble gitt til Bergens Museum av en privat giver i 1834!
 
 På lesesalen vår står en faksimileutgave (av papir) som vår pensjonerte bokbinder Pedro Vasquez har laget. Kom gjerne innom og bla i den en dag.
 
-## Les mer om denne nydelige middelalderboken her:
+**Les mer om denne nydelige middelalderboken her:**
 <a href="https://www.uib.no/ub/spesialsamlingene/159879/en-middelaldersk-pergament-codex">Godbiter fra samlingene: En middelaldersk pergament-codex</a>.
 
-## Bla i den håndskrevne boken i Marcus:
+**Bla i den håndskrevne boken i Marcus:**
 <Work iiifContent="https://api.ub.uib.no/items/ubb-ms-0028?as=iiif">
   <Work.Content>
     <Work.Description>
