--- a/content/tema/tid-og-rom/mellom-sol-og-maane.mdx
+++ b/content/tema/tid-og-rom/mellom-sol-og-maane.mdx
@@ -45,7 +45,7 @@ Når Bergen igjen opplever at havet stiger under stormflo er det som alltid like
 Springflo forekommer regelmessig gjennom året når både månen og solen sammen trekker på vannet. Men, det økte antallet stormfloder, som påvirkes av vindtrykk mot havoverflaten og lavtrykk, kan man i større grad knytte til klimaforandringene. Med andre ord, noe man må forholde seg til, og må gjøre noe med.
 
 
-*En variant av teksten er tidligere publisert i Khrono, 14.02.2020.
+*En variant av teksten er tidligere publisert i Khrono, 14.02.2020.*
 
 
 {/*
