--- a/content/tema/tid-og-rom/scholeusstikket.mdx
+++ b/content/tema/tid-og-rom/scholeusstikket.mdx
@@ -25,5 +25,5 @@ keywords:
     </Work.Link>
   </Work.Content>
 </Work>
-
+<a href="https://marcus.uib.no/search/?q=Scholeus">Her kan du ser flere varianter av Scholeusstikket i Marcus.</a>
 </ContentGrid>
