--- a/content/tema/bokstaver-og-tegn/spesialutfordringen-julia-king.mdx
+++ b/content/tema/bokstaver-og-tegn/spesialutfordringen-julia-king.mdx
@@ -15,14 +15,14 @@ keywords:
 <Video src="https://youtu.be/lk4wKpODLA0?si=IuJrBqK76jZS-EFx" />
 <a href="https://www.youtube.com/playlist?list=PLf8ZIYfAO0qi9KHwsfRRN4nHfP7dJKLl3">Flere videoer fra Spesialutfordringen kan du se her!</a>
 
-## Se fragmentet i Marcus:
+Se dette fragmentet i Marcus:
 <Work iiifContent="https://api.ub.uib.no/items/ubb-ms-1550-6?as=iiif">
   <Work.Content>
     <Work.Description>
       Dobbeltblad av en prestehåndbok fra England, 1300-tallet. Universitetsbiblioteket i Bergen.
     </Work.Description>
     <Work.Link href="https://marcus.uib.no/instance/fragment/ubb-ms-1550-6.html">
-      Bla i boken i Marcus
+      Se fragmentet i Marcus
     </Work.Link>
   </Work.Content>
 </Work>
