--- a/content/tema/helse/armauer-hansen.mdx
+++ b/content/tema/helse/armauer-hansen.mdx
@@ -17,6 +17,8 @@ keywords:
 
 Blant de tidligere ansatte ved Bergens museum, er få like verdensberømte som Gerhard Armauer Hansen – mannen som oppdaget leprabasillen. Til tross for den meget omdiskuterte forskningen, er Armauer Hansens historie blitt en integrert del av Bergens Museums historie.
 
+Armauer Hansen var utdannet lege og arbeidet ved St. Jørgens Hospital og Pleiestiftelsen for Spedalske i Bergen. Han ble internasjonalt kjent for å ha oppdaget lepra-bakterien i 1873, og sykdommen er nå internasjonalt kjent som «Hansen’s disease». Han ble medlem av styret på Bergens Museum i 1872 og ble preses (leder) i 1894. I tillegg til være redaktør for tidsskriftet «Naturen», publiserte han også <a href="https://marcus.uib.no/naturen/?q=gerhard%20armauer%20hansen&filter=type.exact%23Nummer&filter=isDigitized%23Digitalisert">en rekke artikler</a> om alt fra helse til Darwinisme og hvalfangst. Han var også tilknyttet arbeidet med bearbeidelse av vitenskapelige funn fra Nordhavsekspedisjonen.
+
 I boksamlingen med de sjeldneste bøkene står et fransk særtrykk, Armauer Hansens publikasjon om lepra utgitt i Frankrike i 1880, han utdannet verden om den bakteriologiske opprinnelsen til lepra.
 
 <Work iiifContent="https://api.ub.uib.no/items/ubb-librar-o-0193?as=iiif">
@@ -32,7 +34,6 @@ I boksamlingen med de sjeldneste bøkene står et fransk særtrykk, Armauer Hans
 
 
 Les mer om Gerhard Armauer Hansen og lepraforskningen i &quot;200 Fortellinger&quot;: 
-
 <a href="https://tohundrefortellinger.w.uib.no/1873/10/04/1873-armauer-hansen-oppdager-leprabasillen/">1873 Gerhard Armauer Hansens – berømt, feiret og omdiskutert – To hundre fortellinger på to hundre år</a>.
 
 
