--- a/content/index.mdx
+++ b/content/index.mdx
@@ -31,10 +31,10 @@ import { Button } from '@/components/ui/button'
 
 <Carousel title="Samlingenes plass" className="full">
   <Carousel.Item 
-    title="Samlingene og tilvekst" 
-    href="/samlingene-og-tilvekst" 
-    image="/images/samlingene-og-tilvekst.jpg" 
-    imageAlt="Samlingene og tilvekst" 
+    title="En institusjon blir til" 
+    href="https://tohundrefortellinger.w.uib.no/1825/09/26/1825-museets-forste-protokoll/" 
+    image="/images/en-institusjon-blir-til/Bf_Bergen_Museum_Forhandlingsprotokoll_1825-1827_002.jpg" 
+    imageAlt="Håndskrevet protokoll. Inneholder museets første møter" 
   />
   <Carousel.Item 
     title="Samlingene og tilvekst" 
