Refactor image syntax in bucher-og-blaakvalen.mdx to utilize Figure component, enhancing visual presentation and ensuring consistency with recent updates.

--- a/content/tema/dyr/bucher-og-blaakvalen.mdx
+++ b/content/tema/dyr/bucher-og-blaakvalen.mdx
@@ -11,11 +11,17 @@ keywords:
 
 <ContentGrid>
 
-![Blåhval](/images/dyr/ubb-ms-2310.jpg)
-*Blåhval tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.*
-
 # Bucher og blåkvalen
+
 Ein av dei vakraste og mest kjende illustrasjonane i samlingane ved Universitetsbiblioteket er den store blåkvalen teikna av Henrich Bucher jr. Kvalen, har fått rett slektsnamn, Baleoenoptera, men artsnamnet «sibbaldii» blei seinare bytta ut med Carl von Linnés opphavlege «musculus». Det var den norske zoologen Georg Ossian Sars som i 1875 laga artsnamnet «sibbaldii».  
+
+<Figure className="feature" image="/images/dyr/ubb-ms-2310.jpg" alt="Blåhval" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Blåhval tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Bucher (1854-1932) arbeidde som meir eller mindre fast tilsett illustratør ved Bergens Museum i nærmare 40 år, og var i tillegg teiknelærar ved fleire skular i Bergen. Far til Henrich, Henrich Peter Bucher, etablerte ein litografisk verkstad i Bergen i 1845, og fekk eit nært samarbeid med Bergens Museum. M.a. trykka han det banebrytande lepra-plansjeverket til seinare museumsdirektør D.C. Danielssen, C.W. Boeck, og målaren og litografen Johan Ludvig Losting i 1847.  
 
@@ -24,7 +30,7 @@ Henrich jr. arbeidde som litograf hos faren i fleire år, før han blei hyra inn
 Bucher pensjonerte seg i 1924, og  forsvann dermed (og dessverre) også ut av historia til institusjonen, ein delvis gløymd skikkelse i museumshistoria, som no i 200-års jubileet fortener å bli løfta fram frå arkiva våre.   
 
 
-<Work iiifContent="https://api.ub.uib.no/items/ubb-bs-ok-00067?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-bs-ok-00067?as=iiif">
   <Work.Content>
     <Work.Description>
       «The-pause paa Griegs kontor april 1921». Fra venstre: James Grieg, Henrich Bucher jr., Anton Mohr Wiesener. Ukjent fotograf. Universitetsbiblioteket i Bergen.
@@ -35,7 +41,12 @@ Bucher pensjonerte seg i 1924, og  forsvann dermed (og dessverre) også ut av hi
   </Work.Content>
 </Work>
 
-![Sjøstjerne](/images/dyr/ubb-ms-1478-2-003.jpg)
-*Slangestjerner, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.*
+<Figure className="feature" mode="portrait" image="/images/dyr/ubb-ms-1478-2-003.jpg" alt="Sjøstjerne" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Slangestjerner, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 </ContentGrid>
