Refactor image syntax in kaffe-og-elskov-i-blaahvalens-buk.mdx to utilize Figure component, enhancing visual presentation and ensuring consistency with recent updates.

--- a/content/tema/dyr/kaffe-og-elskov-i-blaahvalens-buk.mdx
+++ b/content/tema/dyr/kaffe-og-elskov-i-blaahvalens-buk.mdx
@@ -11,40 +11,71 @@ keywords:
 ---
 
 <ContentGrid>
-![Modell av hval](/images/dyr/ubb-spesmag-f-0062-005.jpg)
-*August Wilhelm Malms modell av blåhvalen som endte sine dager i skjærgården ved Gøteborg. Fotograf: J.P. Peterson. Universitetsbiblioteket i Bergen.*
-
 
 # Kaffe og elskov i blåhvalens buk
+
 I oktober 1865 strandet en 16 meter lang og 25 tonn tung blåhval utenfor Gøteborg. Den endte sine dager som verdens hittil eneste utstoppede og innredede blåhval, som ble foreviget i et praktverk av en bok trykket i 50 eksemplarer, med 29 innlimte originalfotografier, en bok som er blant de virkelige sjeldenhetene i Spesialsamlingen.
 
-![Hval](/images/dyr/ubb-spesmag-f-0062-002.jpg)
-*Den fremtidige «Malmska valen» fotografert i Gøteborg i november 1865. Foto: J.P. Peterson. Universitetsbiblioteket i Bergen.*
+<Figure className="feature" image="/images/dyr/ubb-spesmag-f-0062-005.jpg" alt="Modell av hval" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      August Wilhelm Malms modell av blåhvalen som endte sine dager i skjærgården ved Gøteborg. Fotograf: J.P. Peterson. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
-![Bokforside](/images/dyr/ubb-spesmag-f-0062-001.jpg)
-*Forsiden av August Wilhelm Malms praktbok fra 1867. Universitetsbiblioteket i Bergen.*
+
+<Figure className="feature" image="/images/dyr/ubb-spesmag-f-0062-002.jpg" alt="Hval" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Den fremtidige «Malmska valen» fotografert i Gøteborg i november 1865. Foto: J.P. Peterson. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
+<Figure mode="portrait" image="/images/dyr/ubb-spesmag-f-0062-001.jpg" alt="Bokforside" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Forsiden av August Wilhelm Malms praktbok fra 1867. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Mannen bak dette noe absurde blåhval-vidunderet var August Wilhelm Malm (1821-1882), intendant ved det naturhistoriske museet i Gøteborg. Malm var en virkelig allrounder innenfor naturvitenskapen, selvoppnevnt ekspert på alt fra blomsterfluer til blåhval, og grunnla i tillegg foreningen «Småfoglarnes Vänner». Det er i høyeste grad diskutabelt om Malm var ekspert på hvaler, for da han ble tilkalt for å se på den strandete kolossen i skjærgården, trodde Malm dette var en ny og ukjent hvalart, og oppkalte den sporenstreks etter sin kone Caroline, Balaenoptera Carolinae. Det er uvisst hva hans kone tenkte om denne litt uvanlige kjærlighetserklæringen.
 Blåhvalen ble fraktet fra skjærgården inn til Gøteborg med hjelp av dampskip og lektere, og fremme i byen ble den straks en severdighet. Hvalen ble flådd, oppdelt, spekket ble fjernet, og det gikk med over tusen liter sprit for å konservere indre organer som hjerte og lunger. Malm fikk bygget en hvalformet treramme som den flådde huden skulle festes og strammes rundt, en prosess som i første omgang ikke ble særlig vellykket, det gjensto en 5 meter lang og 65 cm bred glipe på grunn av at hvalhuden ikke var særlig elastisk – en glipe som ble spjelket med plankebiter.
 
 Kjeven til hvalen ble påmontert jernhengsler, slik at munnen kunne åpnes, og fungerte som inngang til hvalkroppen. Inne i blåhvalens buk ble det så innredet en liten salong med benker, rødt teppe på gulvet, tapetsert med blå tøytapet pyntet med gullstjerner. Mange kilder påstår at salongen i perioder fungerte som kafé, med servering av kaffe og punsj, men dette kan være en av mange vandrehistorier om den «Malmska valen».
 
-![Tegning av hvalen med innredet munn](/images/dyr/ny-illustrerat-tidning.jpg)
-*Den «Malmska valen», slik den ble utstilt i Gøteborg. Illustrasjon fra Ny Illustrerat Tidning 1866.*
+<Figure className="feature" mode="portrait" image="/images/dyr/ny-illustrerat-tidning.jpg" alt="Tegning av hvalen med innredet munn" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Den «Malmska valen», slik den ble utstilt i Gøteborg. Illustrasjon fra Ny Illustrerat Tidning 1866.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Uansett, blåhvalen sto ferdig rekonstruert i mars 1866 i en nyoppført bygning i Gøteborg, og i mai samme år ble den åpnet for allmenheten, og ble en enorm publikumssuksess. Beruset av suksessen fikk Malm spesiallaget jernbanevogner for å dra på turné med hvalen. Først til ny publikumssuksess i Stockholm, så videre til Hamburg og Berlin. Omkostningene med Tysklandsreisen var enorme, og berlinerne var ikke særlig interessert i en etter hvert litt medtatt og turnésliten blåhval, så hele prosjektet til Malm gikk dundrende konkurs. Svenske sponsorer reddet hvalen hjem til Gøteborg, der den senere ble en av hovedattraksjonene i det nye naturhistoriske museet, åpnet i 1923, plassert i en spesialbygget sal der publikum kunne vandre inn i hvalgapet. Men blåhvalens buk ble etter hvert et attraktivt og spektakulært tilholdssted for elskovssyke par, og hvalgapet ble senere permanent stengt for fremtidige amorøse hvalfetisjister. Den «Malmska valen» kan fremdeles sees på det naturhistoriske museet i Gøteborg.
 
-![Forside av et hefte med bilde av hval](/images/dyr/ubb-romertall-box-ii-m-1-malm-01.jpg)
-*Populærversjonen av beretningen om den «Malmska valen», publisert 1866. Universitetsbiblioteket i Bergen.*
+<Figure className="feature" mode="portrait" image="/images/dyr/ubb-romertall-box-ii-m-1-malm-01.jpg" alt="Forside av et hefte med bilde av hval" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Populærversjonen av beretningen om den «Malmska valen», publisert 1866. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Malm var i tillegg til alt det andre, en svært begavet reklamemann, og dyktig til å hente inn penger til det halsbrekkende blåhvalprosjektet. Han publiserte i 1866 et 20-siders lite hefte om den «Malmska valen», før han året etter ga ut det svært så ambisiøse franskspråklige praktverket «Monographie Illustrée du Baleinoptére» i folioformat med gulldekorasjoner og vakkert kunstpapir.
 Boka inneholder 133 tekstsider, og 29 originale innlimte albuminfotografier. Fotografiene viser blåhvalen etter at den er fraktet til strandkanten i Gøteborg, og de resterende bildene viser dissekeringsprosessen, samt Malms modell av blåhvalen. Fotografiene er trolig tatt av museumsfotografen J.P. Peterson, og kvaliteten på de over 150 år gamle albuminfotografiene er fremdeles forbløffende god. Som nevnt er boka svært sjelden, trykket i bare 50 eksemplarer, og det er interessant å se subskripsjonslista i boka – 37 personer og institusjoner som hadde forhåndsbestilt og finansiert praktverket – der finner vi «Le Muséum de Bergen, Norvége». Malms bok er regnet som Sveriges første og desidert sjeldneste fotobok, i Norge finnes det bare to eksemplarer i offentlig eie, det ene i Spesialsamlingen ved UB i Bergen.
 
 Etter konkursen med blåhvalen hadde tydeligvis Malm fått nok av naturens største skapninger, og gikk - trolig med lettelse og et snev av selvironi – over til å forske på meitemark.
 
-![Portrett av August Malm](/images/dyr/wikicommons-august-malm.jpg)
-*Portrett av August Wilhelm Malm. Ukjent fotograf. Wikimedia commons.*
-
+<Figure className="feature" mode="portrait" image="/images/dyr/wikicommons-august-malm.jpg" alt="Portrett av August Malm" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Portrett av August Wilhelm Malm. Ukjent fotograf. Wikimedia commons.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 *Teksten er tidligere publisert i Khrono 22.02.2019.*
 
