--- a/content/tema/dyr/kvalsalen.mdx
+++ b/content/tema/dyr/kvalsalen.mdx
@@ -13,7 +13,7 @@ keywords:
 
 Bergens Museum sin grunnleggar Wilhelm Frimann Koren Christie (1778-1849) vart tidleg interessert i kvalen si utvikling og levesett. Frå 1834 samla han kvalfoster og skjelett til museet. Det var ei samlingsverksemd som skulle bli særleg viktig for utviklinga av museet. Les mer om Hvalsalen i "200 Fortellinger": <a href="https://tohundrefortellinger.w.uib.no/1844/09/27/1844-kvalane-pa-bergens-museum/">1844 Kvalane under taket – To hundre fortellinger på to hundre år</a>.
 
-<Work iiifContent="https://api.ub.uib.no/items/ubb-kk-nsx-0206?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-kk-nsx-0206?as=iiif">
   <Work.Content>
     <Work.Description>
       Hvalsalen avfotografert med stereoskopkamera av fotograf Knud Knudson. Innover i lokalet ser vi Fiskeriutstillingen fra 1865.
