--- a/content/tema/dyr/mollusker-og-marginalia.mdx
+++ b/content/tema/dyr/mollusker-og-marginalia.mdx
@@ -9,11 +9,18 @@ keywords:
 ---
 
 <ContentGrid>
-![Tegninger av skjell](/images/dyr/ubb-ms-0644-000.jpg)
-*Illustrasjon fra «Bløddyrene (Mollusca) eller Skalbærende (Conchiferæ), tegnet af Johan Schnelle, deels efter Naturen og deels efter Tegninger. 1864» av Johan Joachim Schnelle. Universitetsbiblioteket i Bergen.*
 
 # Mollusker og marginalia
+
 Åpenbaringer er ikke noe som vanligvis forekommer i en arkivars hverdag, men en sjelden gang, særlig mens man leter etter noe helt annet i dypet av kjellermagasinet, kan det dukke opp en gjemt og glemt skatt som tar pusten fra selv den mest bortskjemte og blaserte arkivar, som da skisseboka til Johan Joachim Schnelle ble «gjenoppdaget» for noen få år siden.
+
+<Figure className="feature" image="/images/dyr/ubb-ms-0644-000.jpg" alt="Tegninger av skjell" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Illustrasjon fra «Bløddyrene (Mollusca) eller Skalbærende (Conchiferæ), tegnet af Johan Schnelle, deels efter Naturen og deels efter Tegninger. 1864» av Johan Joachim Schnelle. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 «Bløddyrene (Mollusca) eller Skalbærende (Conchiferæ), tegnet af Johan Schnelle, deels efter Naturen og deels efter Tegninger. 1864» er det fulle og hele navnet på vidunderet, som det ellers er en fornærmelse å kalle for en «skissebok». Boka er mer som et fullblods og fargesprakende plansjeverk, med hundrevis av detaljerte illustrasjoner av bløtdyr (mollusker), fremstilt med blyant, tusj, tempera og akvarellmaling, fullført ett år før Schnelle døde.
 
@@ -22,14 +29,27 @@ Han ble født 4. mai 1803, som det femte barnet til Gerhard Joachim og Anna Mari
 
 Johan Joachim Schnelle hadde, å dømme av de tre bevarte bøkene ved Spesialsamlingen, en høyt utviklet kunnskap om mollusker og marin zoologi, og likeså høyt utviklede ferdigheter i tegning og maling. Praktverket om «Bløddyr (Mollusca)» må han ha brukt flere år av sitt liv for å fullføre, med sine naturtro og omhyggelig detaljerte håndkolorerte illustrasjoner. Det er også bevart en skissebok i A6-format, der innholdet er en blanding av avskrifter fra zoologiske hovedverk og Schnelles tusj- og blyanttegninger. De 379 sidene i skisseboka gir et godt inntrykk av kunnskapsnivået til Schnelle, hva han hadde lest og tilegnet seg av publiserte verk om marin zoologi, og samtidig synliggjør skisseboka, med tilnærmet mikroskopisk presisjon, at tegneferdighetene hans var på et skyhøyt nivå.
 
-![Åpen bok med tegninger i margen](/images/dyr/ubb-spesmag-o-0416.jpg)
-*Oppslag fra «Beskrivelser og Iagttagelser over nogle mærkelige eller nye i Havet ved den Bergenske Kyst Dyr» av Michael Sars (Bergen 1835), med Johan Joachim Schnelles marginalia og illustrasjoner. Universitetsbiblioteket i Bergen.*
+<Figure className="feature" image="/images/dyr/ubb-spesmag-o-0416.jpg" alt="Åpen bok med tegninger i margen" width={2000} height={2000}>
+  <Figure.Content>
+    <Figure.Description>
+      Oppslag fra «Beskrivelser og Iagttagelser over nogle mærkelige eller nye i Havet ved den Bergenske Kyst Dyr» av Michael Sars (Bergen 1835), med Johan Joachim Schnelles marginalia og illustrasjoner. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Skisseboka innledes med illustrert avskrift fra en av publikasjonene til marinbiologen og zoologen Michael Sars, og i den tredje bevarte boka etter Schnelle fortsetter han i en visuell dialog med skriftene til Sars. I Schnelles eksemplar av boka «Beskrivelser og Iagttagelser over nogle mærkelige eller nye i Havet ved den Bergenske Kyst Dyr», publisert av Michael Sars i 1835, akkompagnerer og kompletterer Schnelle teksten til Sars med marginalia – margillustrasjoner, kommentarer, drodlerier, blekkflekker osv. Schnelle har tydeligvis hatt som mål å gjennomillustrere det som er et av hovedverkene til Sars; i tillegg til å sette andre spor – bokspor – etter seg i det velbrukte eksemplaret.
 
 Oppdagelsen av slike bokspor og marginalia, og gjenoppdagelsen av mesterverket om molluskene, er altså grunnen til at selv den mest blaserte arkivar opplever øyeblikk av pur lykke og fascinasjon, samt lettelse og glede over at slike kulturhistoriske skatter faktisk er bevart og sikret for fremtiden. Og ikke nok med det. Godt gjemt bakerst i mollusk-boka har Schnelle etterlatt seg to 155 år gamle pressede og usedvanlig godt preserverte lønneblad, like fargesprakende som molluskene, som en siste hilsen til fremtidige arkivarer og lesere.
 
-![Tegninger av skjell](/images/dyr/ubb-ms-0644-003.jpg)
+
+<Figure className="feature" mode="portrait" image="/images/dyr/ubb-ms-0644-003.jpg" alt="Tegninger av skjell" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Illustrasjon fra «Bløddyrene (Mollusca) eller Skalbærende (Conchiferæ), tegnet af Johan Schnelle, deels efter Naturen og deels efter Tegninger. 1864» av Johan Joachim Schnelle. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
 *Illustrasjon fra «Bløddyrene (Mollusca) eller Skalbærende (Conchiferæ), tegnet af Johan Schnelle, deels efter Naturen og deels efter Tegninger. 1864» av Johan Joachim Schnelle. Universitetsbiblioteket i Bergen.*
 
 
