--- a/content/tema/dyr/nordspisshvalen.mdx
+++ b/content/tema/dyr/nordspisshvalen.mdx
@@ -11,23 +11,47 @@ keywords:
 <ContentGrid>
 
 # Nordspisshvalen
-## En bildereise fra hagen til museet
+ 
+ En bildereise fra hagen til museet
 
-![Nordspisshval](/images/dyr/ubb-bgm-nordspisshval-01.jpg)
-*Nordspisshvalen på en vogn i hagen til Bergens Museum. Ukjent fotograf. Universitetsbiblioteket i Bergen.*
+<Figure image="/images/dyr/ubb-bgm-nordspisshval-01.jpg" alt="Nordspisshvalen på en vogn i hagen til Bergens Museum" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Nordspisshvalen på en vogn i hagen til Bergens Museum. Ukjent fotograf. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
+<Figure image="/images/dyr/ubb-ms-1478-2-002.jpg" alt="Tegning av nordspisshvalen" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Nordspisshvalen, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
-![Nordspisshval](/images/dyr/ubb-ms-1478-2-002.jpg)
-*Nordspisshvalen, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.*
+<Figure image="/images/dyr/ubb-bgm-nordspisshval-02.jpg" alt="Man holder opp en stor modell av nordspisshvalen på Bergens Museum" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Modell av Nordspisshvalen på Bergens Museum. Ukjent fotograf. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
-![Nordspisshval](/images/dyr/ubb-bgm-nordspisshval-02.jpg)
-*Modell av Nordspisshvalen på Bergens Museum. Ukjent fotograf. Universitetsbiblioteket i Bergen.*
+<Figure image="/images/dyr/ubb-ms-1478-2-001.jpg" alt="" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Nordspisshvalen, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
+<Figure image="/images/dyr/ubb-bgm-bok-1904-01.jpg" alt="" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Henrich Buchers tegninger av Nordspisshvalen i Bergens Museums årbok 1904. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
-![Nordspisshval](/images/dyr/ubb-ms-1478-2-001.jpg)
-*Nordspisshvalen, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.*
-
-
-![Nordspisshval](/images/dyr/ubb-bgm-bok-1904-01.jpg)
-*Henrich Buchers tegninger av Nordspisshvalen i Bergens Museums årbok 1904. Universitetsbiblioteket i Bergen.*
 </ContentGrid>
