Update image paths in wfk-christie.mdx and index.mdx to reflect new directory structure for consistency and accuracy.

--- a/content/wfk-christie.mdx
+++ b/content/wfk-christie.mdx
@@ -23,14 +23,14 @@ Om Christie
    <Card 
     title="Bergens Museum og trekløveret Christie, Neumann og Konow" 
     description="Les mer om de tre grunnleggerne" 
-    image="/images/det-store-utland/E8500.jpg" 
+    image="/images/verden-i-bergen/E8500.jpg" 
     imageAlt="/" 
     href="https://tohundrefortellinger.w.uib.no/1825/01/01/1825-christie-og-neumanns-museum/" 
   />
    <Card 
     title="Reiseapotek" 
     description="Les mer om reiseapoteket Christie hadde med på sine mange reiser" 
-    image="/images/det-store-utland/E8500.jpg" 
+    image="/images/ver/E8500.jpg" 
     imageAlt="/" 
     href="https://tohundrefortellinger.w.uib.no/1847/09/27/1847-christies-reiseapotek/" 
   />
