Correct href case for wfk-christie in menneskene.mdx to ensure consistency with URL structure.

--- a/content/menneskene.mdx
+++ b/content/menneskene.mdx
@@ -18,7 +18,7 @@ import {Cards, Card} from '@/components/card'
     description="Grunnlegger av Bergens Museum" 
     image="/images/Mennesker-museet/Christie_grunnleggerBy1871.jpg" 
     imageAlt="Portrett av Chrisite" 
-    href="/wfk-Christie"
+    href="/wfk-christie"
   />
    <Card 
     title="Jacob Neumann (1772-1848)"
