Update image path for Reiseapotek in wfk-christie.mdx to align with new directory structure.

--- a/content/wfk-christie.mdx
+++ b/content/wfk-christie.mdx
@@ -30,7 +30,7 @@ Om Christie
    <Card 
     title="Reiseapotek" 
     description="Les mer om reiseapoteket Christie hadde med på sine mange reiser" 
-    image="/images/ver/E8500.jpg" 
+    image="/images/verden-i-bergen/E8500.jpg" 
     imageAlt="/" 
     href="https://tohundrefortellinger.w.uib.no/1847/09/27/1847-christies-reiseapotek/" 
   />
