legg-til-foto-verden-i-bergen

--- a/content/tema/verden-i-bergen/index.mdx
+++ b/content/tema/verden-i-bergen/index.mdx
@@ -45,7 +45,7 @@ kjøpt og hvor mye det kostet. Både protokollen og gjenstandene har vi fortsatt
     image="/images/verden-i-bergen/A007FFaL0001_katalog.jpg" 
     imageAlt="Katalog innbundet i brunt skinn"
   > 
-    Den etnografiske katalogen fra 1849 (Skjermbilde fra Digitalarkivet).
+    Den etnografiske katalogen fra 1849 (Skjermbilde fra Digitalarkivet, Universitetsmuseet i Bergen).
   </ImageCarousel.Item>
 
   <ImageCarousel.Item
@@ -59,21 +59,21 @@ kjøpt og hvor mye det kostet. Både protokollen og gjenstandene har vi fortsatt
     image="/images/verden-i-bergen/Jacobsen_katalog.jpg" 
     imageAlt="Håndskrevet protokoll, over gjenstander kjøpt inn til museet mellom 1892 og 1894."
   > 
-    Johan Adrian Jacobsen sin protokoll over enkelte av gjenstandene han kjøpte i Sogn. Foto: Anita Haugen Lie, Universitetsmuseet i Bergen 
+    Johan Adrian Jacobsen sin protokoll over enkelte av gjenstandene han kjøpte i Sogn. (Foto: Anita Haugen Lie, Universitetsmuseet i Bergen) 
   </ImageCarousel.Item>
 
   <ImageCarousel.Item
     image="/images/verden-i-bergen/E2292_Kvinnelue.jpg" 
     imageAlt="Grønn lue, med røde og blå bånd.."
   > 
-    Samisk kvinnelue med trehorn (E2292) Foto: Universitetsmuseet i Bergen. 
+    Samisk kvinnelue med trehorn (E2292) (Foto: Universitetsmuseet i Bergen). 
   </ImageCarousel.Item>
   
   <ImageCarousel.Item
     image="/images/verden-i-bergen/Bd1931_brudekrone.jpg" 
     imageAlt="Brudekrone i sølv. Rikt utsmykket"
   > 
-    Brudekrone i sølv kjøpt av Jacobsen i Hornindal (Bd1931) Foto: Universitetsmuseet i Bergen.
+    Brudekrone i sølv kjøpt av Jacobsen i Hornindal (Bd1931) (Foto: Svein Skare, Universitetsmuseet i Bergen).
   </ImageCarousel.Item>
 
 </ImageCarousel>
