Add new pages and metadata for notable figures in Menneskene section

--- a/content/menneskene/index.mdx
+++ b/content/menneskene/index.mdx
@@ -16,14 +16,14 @@ import {Cards, Card} from '@/components/card'
    <Card 
     title="Wilhelm Frimann Koren Christie (1778-1849)"
     description="Grunnlegger av Bergens Museum" 
-    image="/images/Mennesker-museet/Christie_grunnleggerBy1871.jpg" 
-    imageAlt="Portrett av Chrisite" 
-    href="/wfk-christie"
+    image="/images/menneskene/Christie_grunnleggerBy1871.jpg" 
+    imageAlt="Portrett av Christie" 
+    href="/menneskene/wfk-christie"
   />
    <Card 
     title="Jacob Neumann (1772-1848)"
     description="Biskop i Bergen og sentral i museets Direksjon og innsamlingsarbeid" 
-    image="/images/Mennesker-museet/By7851_Neumann_red.jpg" 
+    image="/images/menneskene/By7851_Neumann_red.jpg" 
     imageAlt="Portrett av Neumann" 
     href="https://nbl.snl.no/Jacob_Neumann"
   />
@@ -31,13 +31,13 @@ import {Cards, Card} from '@/components/card'
     title="August Konow (1780-1873)"
     description="Foretningsmann, politiker og sentral i opprettelsen av Bergens Museum" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Portrett av Chrisite" 
+    imageAlt="Portrett av August Konow" 
     href="https://nbl.snl.no/August_Konow"
   />
   <Card
     title="Andres Lorange (1847-1888)"
     description="Museets første konservator og arkeolog" 
-    image="/images/Mennesker-museet/AndersLorange_red.jpg" 
+    image="/images/menneskene/AndersLorange_red.jpg" 
     imageAlt="Portrett av Andres Lorange" 
     href="https://www.unimus.no/arkeologi/lorange/#0"
   />
@@ -46,7 +46,7 @@ import {Cards, Card} from '@/components/card'
     description="Energisk innsamler og autodidakt" 
     image="/nav-card-images/bt-23-10-1933-olaf-hanssen-icon.jpg" 
     imageAlt="Portrett av Olaf Hanssen" 
-    href="/folk-olaf-hanssen"
+    href="/menneskene/olaf-hanssen"
   />
   <Card 
     title="Magdalene Abel (1869-)"
@@ -58,14 +58,14 @@ import {Cards, Card} from '@/components/card'
   <Card 
     title="Haakon Shetelig (1877-1955)"
     description="Museets første professor i arkeologi" 
-    image="/images/Mennesker-museet/HaakonShetelig_red.jpg" 
+    image="/images/menneskene/HaakonShetelig_red.jpg" 
     imageAlt="Portrett av Haakon Shetelig" 
     href="https://snl.no/Haakon_Shetelig"
   />
   <Card 
     title="Johannes Bøe (1891-1971)"
     description="Professor i arkeologi" 
-    image="/images/Mennesker-museet/Johs_Bøe_red.jpg" 
+    image="/images/menneskene/Johs_Bøe_red.jpg" 
     imageAlt="Portrett av Johs. Bøe" 
     href="https://snl.no/Johannes_B%C3%B8e"
   />
