--- a/content/menneskene/wfk-christie.mdx
+++ b/content/menneskene/wfk-christie.mdx
@@ -10,7 +10,7 @@ import {Cards, Card} from '@/components/card'
 
 <ContentGrid>
 
-Om Christie
+# Wilhelm Frimann Koren Christie (1778-1849)
 
 <Cards id="historier" title="Historier om Verden i Bergen" className="full pt-10 md:pt-20">
   <Card 
